--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
@@ -24,7 +23,6 @@
     "html-webpack-plugin": "^2.15.0",
     "source-map-loader": "^0.1.5",
     "webpack": "^1.12.15",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-dev-middleware": "^1.6.1"
   }
 }
