--- a/.eslintrc
+++ b/.eslintrc
@@ -1,34 +1,20 @@
 {
-  "extends": "airbnb",
+  "extends": "airbnb-base",
   "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
+    ecmaVersion: 6,
     sourceType: "module"
   },
   "env": {
-    "es6": true,
     "browser": true,
+    "es6": true,
     "node": true
   },
   "parser": "babel-eslint",
   "rules": {
-    "max-len": 0,
     "func-names": 0,
-    "comma-dangle": 0,
     "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
     "indent": [2, 4, { "SwitchCase": 1 }],
-    "no-use-before-define": [2, "nofunc"],
-    "quotes": [2, "single"],
-    "strict": [2, "never"],
-    "babel/generator-star-spacing": 1,
-    "babel/new-cap": 1,
-    "babel/object-shorthand": 1,
-    "babel/arrow-parens": 1,
-    "babel/no-await-in-loop": 1
-  },
-  "plugins": [
-    "babel",
-    "react"
-  ]
+    "no-plusplus": 0,
+    "no-use-before-define": [2, "nofunc"]
+  }
 }
