--- a/package.json
+++ b/package.json
@@ -1,28 +1,42 @@
 {
   "name": "simple-promise",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.5.0",
+  "description": "Promises/A+ compliant JavaScript promise implementation",
+  "main": "lib/SimplePromise.js",
   "scripts": {
-    "start": "node devServer.js"
+    "build": "webpack --mode=build",
+    "dev": "webpack --progress --colors --watch --mode=dev",
+    "test": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
   },
+  "devDependencies": {
+    "babel": "6.5.2",
+    "babel-core": "6.14.0",
+    "babel-eslint": "6.1.2",
+    "babel-loader": "6.2.5",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-preset-es2015": "6.14.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "3.5.0",
+    "eslint-loader": "1.5.0",
+    "eslint-config-airbnb-base": "^7.0.1",
+    "eslint-plugin-import": "^1.14.0",
+    "mocha": "2.3.4",
+    "promises-aplus-tests": "^2.1.2",
+    "webpack": "1.13.2",
+    "yargs": "3.32.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Kamahl19/simple-promise.git"
+  },
+  "keywords": [
+    "promise",
+    "promises-aplus"
+  ],
   "author": "Martin Litvaj <kamahl19@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^2.7.0",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-react": "^4.3.0",
-    "express": "^4.13.4",
-    "html-webpack-plugin": "^2.15.0",
-    "source-map-loader": "^0.1.5",
-    "webpack": "^1.12.15",
-    "webpack-dev-middleware": "^1.6.1"
-  }
+  "bugs": {
+    "url": "https://github.com/Kamahl19/simple-promise/issues"
+  },
+  "homepage": "https://github.com/Kamahl19/simple-promise"
 }
